# MusicMood

./: .cache  .dockerignore  .env.docker  .env.example  .gitignore  CI_CD_GUIDE.md  CONTRIBUTING.md  DOCKER_GUIDE.md  DOCKER_REGISTRY_SETUP.md  Dockerfile.backend  Dockerfile.frontend  FIXES_APPLIED.md  LICENSE  Makefile  PHASE7_DOCKER_COMPLETION.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PREMIUM_FEATURES.md  QUICK_START.md  README.md  ROADMAP_COMPLIANCE.md  SETUP_GUIDE.md  SYSTEM_STATUS.md  VERIFICATION_REPORT.md  alembic.ini  docker-compose.yml  docker-ops.ps1  musicmood_3agent_roadmap.md  pyproject.toml  quickstart.ps1  start-app.ps1  task_4_3_status.py  test_agent3.py  test_api_live.py  test_curator_ranking.py  test_curator_simple.py  test_diversity.py  test_explanation.py  test_fastapi_init.py  test_final_validation.py  (+12 more)
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: cd-docker-push.yml  ci-build-test.yml  codeql-analysis.yml  dependabot-auto-merge.yml  pr-validation.yml  stale.yml
.streamlit/: config.toml  secrets.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 191bb54848e3_initial_migration_with_user_moodentry_.py
app/: __init__.py  cache.py  database.py  main.py
app/agents/: __init__.py  curator_agent.py  mood_agent.py
app/api/: __init__.py  health.py  models.py
app/api/routes/: __init__.py  playlists.py
app/config/: settings.py
app/db/: __init__.py  database.py
app/frontend/: __init__.py  api_client.py  minimal_app.py  simple_app.py  streamlit_app.py  ui_utils.py
app/frontend/pages/: 1_🎵_Generate_Playlist.py  2_📚_My_Playlists.py  3_📊_Mood_History.py
app/services/: __init__.py  curator_simple.py  orchestrator.py  playlist_service.py
app/services/spotify/: __init__.py  spotify_client.py
app/tools/: __init__.py  curator_tools.py  mood_tools.py  spotify_tools.py  user_tools.py
app/utils/: audio_features_estimator.py
scripts/: docker-push.ps1  pull-ollama-models.sh  start-backend.sh
